pkginclude_HEADERS = FPU_stuff.h bitfields.h datatypes.h dlist.h dmalloc.h elf.h elf_structures.h \
	enum_files.h files.h fmt_utils.h fsave.h fuzzybool.h lisp.h logging.h memutils.h \
	oassert.h ostrings.h rand.h rbtree.h regex.h regex_internal.h set.h strbuf.h string_list.h \
	stuff.h x86.h x86_intrin.h
