lib_LIBRARIES = liboctothorpe.a

liboctothorpe_a_SOURCES = FPU_stuff_GCC.c dlist.c dmalloc.c elf.c enum_files.c files.c fsave.c \
	lisp.c logging.c memutils.c oassert.c ostrings.c rand.c rbtree.c regex.c \
	set.c strbuf.c string_list.c stuff.c x86.c x86_intrin.c

AM_CPPFLAGS = -I$(top_srcdir)/include

EXTRA_DIST = regcomp.c regex_internal.c regexec.c

